fixing overflow

--- a/studio/src/App.css
+++ b/studio/src/App.css
@@ -21,7 +21,6 @@ body {
 #content {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 100px); /* Adjust according to your needs */
 }
 
 #heading{
